<resources>
    <string name="app_name">Student Information Exchange</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password_string">Password</string>
    <string name="repeat_password_string">Repeat password</string>
    <string name="login_button_text">Login</string>
    <string name="are_you_registered_with_us_text">Are you registered with us?</string>
    <string name="don_t_have_an_account_text">Don\'t have an account ?</string>
    <string name="sign_up_link_text">Sign up</string>
    <string name="first_name_signup">First Name</string>
    <string name="last_name_signup">Last Name</string>
    <string name="register_button_text">Register</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="login_text">Login</string>
    <string name="create_account_text">Create account</string>
    <string name="back_to_home_screen_text">Back to Home Screen</string>
    <string name="home_text">Home</string>
    <string name="register_text">Register</string>
    <string name="message_text">Message</string>
    <string name="form_clubs_text">Form Clubs</string>
    <string name="tutoring_services_text">Tutoring\nServices</string>
    <string name="advertisement_text">Advertisement</string>
    <string name="information_exchange_text">Information\nExchange</string>
    <string name="payments_text">Payments</string>
    <string name="buy_amp_sell_text"><![CDATA[Buy&Sell]]></string>
    <string name="space_for_the_search_bar_text">Space for the Search bar</string>
    <string name="logout_text">Logout</string>
    <string name="dashboard_text">DashBoard</string>
    <string name="this_is_market_place_for_buy_and_sell_text">This is Market place for Buy and Sell</string>
    <string name="product_name_text">Product Name :</string>
    <string name="enter_the_name_of_the_item_text">Enter name of the Item</string>
    <string name="price_text">Price :</string>
    <string name="enter_the_selling_price_text">Enter Selling Price</string>
    <string name="description_text">Description :</string>
    <string name="enter_product_description_text">Enter product description</string>
    <string name="used_item_text">Used item</string>
    <string name="new_item_text">New item</string>
    <string name="what_is_the_condition_of_the_item_text">What is the condition of the item ?</string>
    <string name="choose_photo_text">Choose Photo</string>
    <string name="confirm_transaction_text">Confirm transaction</string>
    <string name="buy_used_nor_n_new_items_text">Buy used\nOr\n New items</string>
    <string name="sell_used_nor_n_new_items_text">Sell USEd\nor\n New items</string>
    <string name="back_to_dashboard_text">Back to Dashboard</string>
    <string name="back_text">Back</string>
    <string name="buy_item_text">Buy item</string>
    <string name="price_breakdown_text">Price Breakdown</string>
    <string name="product_price_text">Product Price :</string>
    <string name="sales_tax_text">Sales tax :</string>
    <string name="total_amount_due_text">Total Amount Due :</string>
    <string name="default_text">Default</string>
    <string name="tutor_text">Tutor</string>
    <string name="student_text">Student</string>
    <string name="tutor_art_desc">Image of message bubbles, a cursor, and textbooks</string>
    <string name="payment_art_desc">Image of coins, and world currency signs</string>
    <string name="sm_button_text">Manage Sessions</string>
    <string name="am_button_text">Announce to Class</string>
    <string name="vm_button_text">View Requests</string>
    <string name="cb_button_text">Configure Banking Method</string>
    <string name="em_button_text">Manage Enroll</string>
    <string name="rt_button_text">Rate Prior Tutors</string>
    <string name="cm_button_text">Add or Remove Card</string>
    <string name="bm_button_text">Link or Unlink Bank</string>
    <string name="rm_button_text">Request a Refund</string>
    <string name="submit_text">Submit</string>
    <string name="unlink_text">Unlink</string>
    <string name="remove_text">Remove</string>
    <string name="routing_text">Routing Number</string>
    <string name="account_text">Account Number</string>
    <string name="csv_text">CSV</string>
    <string name="card_text">Card Number</string>
    <string name="lab_title">Link a Bank</string>
    <string name="lb_title">Linked Bank</string>
    <string name="aac_title">Add a Card</string>
    <string name="lc_title">Linked Card</string>
    <string name="bp_desc">Bank Provider</string>
    <string name="at_desc">Account Type</string>
    <string name="bofa_text">Bank of America</string>
    <string name="chase_text">Chase</string>
    <string name="wf_text">Wells Fargo</string>
    <string name="citi_text">Citi Bank</string>
    <string name="cap_text">Capital One</string>
    <string name="pnc_text">PNC Bank</string>
    <string name="us_text">US Bank</string>
    <string name="checking_text">Checking</string>
    <string name="savings_text">Savings</string>
    <string name="expiry_text">mm/yy</string>
    <string name="card">Card</string>
    <string name="bank">Bank</string>
    <string name="credit_text">Credit</string>
    <string name="debit_text">Debit</string>
    <string name="ct_desc">Card Type</string>
    <string name="visa_text">Visa</string>
    <string name="mc_text">MasterCard</string>
    <string name="amex_text">American Express</string>
    <string name="disc_text">Discover</string>
    <string name="jcb_text">JCB</string>
    <string name="add_text">Add</string>
    <string name="edit_text">Edit</string>
    <string name="join_text">Join</string>
    <string name="an_desc">Select a scheduled session</string>
    <string name="st_text">Select Transaction</string>
    <string name="rfr_text">Reason for Refund</string>
    <string name="sched_text">Schedule a Session</string>
    <string name="session_title_text">Session Title</string>
    <string name="desc_text">Description</string>
    <string name="p_text">Price</string>
    <string name="date_text">Date (mm/dd)</string>
    <string name="sbject_text">Subject</string>
    <string name="location_text">Location</string>
    <string name="start_time_text">Start Time</string>
    <string name="duration_text">Duration</string>
    <string name="capacity_text">Capacity</string>
    <string name="accept_or_reject">Accept or Reject Requests</string>
    <string name="announcement_text">Announcement</string>
    <string name="amount_text">Enter Amount</string>
    <string name="dollar_example">$xxx.xx</string>
    <string name="mas_title">Modify a Session</string>
    <string name="modify_text">Modify</string>
    <string name="sas_text">Select a Session</string>
    <string name="select_text">Select</string>
    <string name="browse_test">Browse Sessions</string>
    <string name="overview">Overview</string>
    <string name="rsvp_text">RSVP Session</string>
    <string name="drop_text">Drop Enrolled Sessions</string>
    <string name="prior_text">Select Prior Session</string>
    <string name="rate_title">Issue a Rating</string>
    <string name="rate_text">Rate</string>
    <string name="rq_text">Requests will appear here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rating">RatingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_pickup_or_delivery_text">Choose Pickup Or Delivery</string>
    <string name="pick_up_text">Pick Up</string>
    <string name="delivery_text">Delivery</string>
    <string name="confirm_address_text">Confirm Address</string>
    <string name="enter_your_delivery_address_text">Enter Your Delivery Address</string>
    <string name="enter_street_address_text">Enter Street Address</string>
    <string name="enter_city_state_text">Enter City, State</string>
    <string name="enter_zip_code_text">Enter Zip Code</string>
    <string name="proceed_to_payment_text">Proceed to Payment</string>
    <string name="pickup_location_text">Pickup Location :</string>
    <string name="_416_yates_street_text">416 Yates Street,</string>
    <string name="arlington_tx_text">Arlington, TX</string>
    <string name="_76010_text">76010</string>
    <string name="to_text">To:</string>
    <string name="email_address_text">Email Address</string>
    <string name="subject_text">Subject:</string>
    <string name="enter_email_heading_text">Enter email heading</string>
    <string name="message_string">Message:</string>
    <string name="type_your_message_here_text">Type your message here.....</string>
    <string name="send_email_text">SEND EMAIL</string>
    <string name="business_name_text">Business Name</string>
    <string name="contact_number_text">Contact Number</string>
    <string name="submit_text2">Submit</string>
    <string name="advertisement_request_form_text">Advertisement request form</string>
    <string name="search_for_events_components_text">Search for events, components</string>

</resources>