<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ss_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sched_text"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationX="10dp" />

        <View
            android:id="@+id/ss_div"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add" />

        <EditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/session_title_text"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/subject_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subject_text"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/date_text"
                android:inputType="date"
                android:minHeight="50dp" />

            <EditText
                android:id="@+id/start_time_field"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/start_time_text"
                android:inputType="time"
                android:minHeight="50dp" />

            <EditText
                android:id="@+id/duration_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/duration_text"
                android:inputType="time"
                android:minHeight="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/p_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/capacity_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/capacity_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/location_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location_text"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <EditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/desc_text"
            android:inputType="textMultiLine"
            android:minHeight="100dp" />

        <Button
            android:id="@+id/ss_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/indigo"
            android:text="@string/submit_text" />

    </LinearLayout>

</FrameLayout>