<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Input text for the email  -->
    <TextView
        android:id="@+id/Sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/are_you_registered_with_us_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sign_in_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_sign_in"
        android:layout_width="300dp"
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Sign_in_text"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Sign_in_text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password for the email  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_sign_in"
        android:hint="@string/password_string">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/input_password"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/don_t_have_an_account_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/sign_up_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/sign_up_link_text"
        android:textAllCaps="false"
        android:textColor="@color/indigo_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/input_password"
        app:layout_constraintTop_toBottomOf="@id/question_text" />


</androidx.constraintlayout.widget.ConstraintLayout>