<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SessionEditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sas_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sas_text"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationX="10dp" />

        <View
            android:id="@+id/sas_div"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ScrollView
                android:layout_width="200dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/sas_rgroup"
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />
                </LinearLayout>
            </ScrollView>

            <Space
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/modify_button"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:backgroundTint="@color/indigo"
                android:text="@string/modify_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/ms_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mas_title"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:translationX="10dp" />

        <View
            android:id="@+id/ms_div"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/black"
            android:backgroundTintMode="add" />

        <EditText
            android:id="@+id/location_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location_text"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/start_time_edit"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/start_time_text"
                android:inputType="time"
                android:minHeight="50dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/capacity_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/capacity_text" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/desc_text"
            android:inputType="textMultiLine"
            android:minHeight="100dp" />

        <Button
            android:id="@+id/ms_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/indigo"
            android:text="@string/submit_text" />

    </LinearLayout>

</FrameLayout>